feat: aggregating items for public pages if they are displayed equally